--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,7 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "/"
+relativeURLs = true
+disablePathToLower = false
 languageCode = "en-us"
-googleAnalytics = "G-XYFD95KB4J"
-relativeURLs = false
-disablePathToLower = true
 ignoreFiles = [
     "/content/templates/*",
     "/content/private/*",
