--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,6 +1,6 @@
 name: "ryanwwest"
 enableToc: true
-openToc: false
+openToc: true
 enableLinkPreview: true
 enableLatex: true
 enableCodeBlockTitle: true
